a "sorted & immutable" List<Integer> is produced: Arrays.stream(integers).sorted().boxed().toList()