@@ -1,16 +1,14 @@
 package com.arkenidar;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Biblioteca {
     private final List<Integer> list;
 
-    Biblioteca(int[] ints) {
-        this.list = new ArrayList<>(Arrays.stream(ints).boxed().toList());
-        //this.list = Arrays.stream(ints).boxed().collect(Collectors.toList());
+    Biblioteca(int[] integers) {
+        list = Arrays.stream(integers).sorted().boxed().toList();
     }
 
     public boolean esisteLibro(int index) {
@@ -18,7 +16,6 @@ public class Biblioteca {
     }
 
     public int[] getIndiciLibriOrdinati() {
-        Collections.sort(list);
         return list.stream().mapToInt(i -> i).toArray();
     }
 }
